# tac

./: .editorconfig  .gitignore  .gitmodules  3DDebug.hlsl  CMakeLists.txt  CMakePresets.json  README.md  build_std_modules.props  out.txt  test.props
src/: CMakeLists.txt  README.md  original_hint_file.h
src/common/: CMakeLists.txt  README.md  imconfig.cpp  imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  stb_impl.cpp  stb_rect_pack.h  stb_textedit.h  stb_truetype.h  tacAlgorithm.cpp  tacAlgorithm.h  tacAssetManager.cpp  tacAssetManager.h  tacCamera.cpp  tacCamera.h  tacColorUtil.cpp  tacColorUtil.h  tacCommon.natvis  tacDesktopWindow.cpp  tacDesktopWindow.h  tacErrorHandling.cpp  tacErrorHandling.h  tacEvent.h  tacFont.cpp  tacFont.h  tacFrameMemory.cpp  tacFrameMemory.h  tacHash.cpp  tacHash.h  tacIDCollection.cpp  tacIDCollection.h  tacId.h  tacImGui.cpp  tacImGui.h  tacJobQueue.cpp  tacJobQueue.h  tacJson.cpp  (+52 more)
src/creation/: CMakeLists.txt  tacCreation.cpp  tacCreation.h  tacCreationAssetView.cpp  tacCreationGameObjectMenuWindow.cpp  tacCreationGameObjectMenuWindow.h  tacCreationGameWindow.cpp  tacCreationGameWindow.h  tacCreationMainWindow.cpp  tacCreationMainWindow.h  tacCreationPrefab.cpp  tacCreationPrefab.h  tacCreationProfileWindow.cpp  tacCreationProfileWindow.h  tacCreationPropertyWindow.cpp  tacCreationPropertyWindow.h  tacCreationSystemWindow.cpp  tacCreationSystemWindow.h  tacEditorWindow.cpp  tacEditorWindow.h  tac_creation.cpp  tac_creation.h  tac_creation_asset_view.cpp  tac_creation_game_object_menu_window.cpp  tac_creation_game_object_menu_window.h  tac_creation_game_window.cpp  tac_creation_game_window.h  tac_creation_main_window.cpp  tac_creation_main_window.h  tac_creation_prefab.cpp  tac_creation_prefab.h  tac_creation_profile_window.cpp  tac_creation_profile_window.h  tac_creation_property_window.cpp  tac_creation_property_window.h  tac_creation_system_window.cpp  tac_creation_system_window.h
src/game/: CMakeLists.txt  tacGame.cpp  tacGame.h  tac_game.cpp  tac_game.h
src/game-example-letter/: CMakeLists.txt  tac_example_letter.cpp  tac_example_letter.h
src/game-examples/: CMakeLists.txt  tacExampleFluid.cpp  tacExampleFluid.h  tacExamples.cpp  tacExamples.h  tac_example_fluid.cpp  tac_example_fluid.h  tac_example_meta.cpp  tac_example_meta.h  tac_example_phys_sim_1_force.cpp  tac_example_phys_sim_1_force.h  tac_example_phys_sim_2_integration.cpp  tac_example_phys_sim_2_integration.h  tac_example_phys_sim_3_torque.cpp  tac_example_phys_sim_3_torque.h  tac_example_phys_sim_4_tank.cpp  tac_example_phys_sim_4_tank.h  tac_example_phys_sim_5_lincollision.cpp  tac_example_phys_sim_5_lincollision.h  tac_example_phys_sim_6_rotcollision.cpp  tac_example_phys_sim_6_rotcollision.h  tac_example_phys_sim_7_friction.cpp  tac_example_phys_sim_7_friction.h  tac_example_phys_sim_force.cpp  tac_example_phys_sim_force.h  tac_examples.cpp  tac_examples.h  tac_examples_presentation.cpp  tac_examples_presentation.h  tac_examples_registry.cpp  tac_examples_registry.h  tac_examples_state_machine.cpp  tac_examples_state_machine.h
src/level_editor/: CMakeLists.txt  tac_entity_selection.cpp  tac_entity_selection.h  tac_level_editor.cpp  tac_level_editor.h  tac_level_editor_asset_view.cpp  tac_level_editor_asset_view.h  tac_level_editor_game_object_menu_window.cpp  tac_level_editor_game_object_menu_window.h  tac_level_editor_game_window.cpp  tac_level_editor_game_window.h  tac_level_editor_main_window.cpp  tac_level_editor_main_window.h  tac_level_editor_prefab.cpp  tac_level_editor_prefab.h  tac_level_editor_profile_window.cpp  tac_level_editor_profile_window.h  tac_level_editor_property_window.cpp  tac_level_editor_property_window.h  tac_level_editor_system_window.cpp  tac_level_editor_system_window.h  tac_level_editor_window_manager.cpp  tac_level_editor_window_manager.h
src/level_editor_2/: CMakeLists.txt  tac_level_editor.cpp  tac_level_editor.h
src/shell/: CMakeLists.txt  README.md  tacDesktopApp.cpp  tacDesktopApp.h  tacDesktopEventBackend.cpp  tacDesktopEventBackend.h  tacDesktopWindowGraphics.cpp  tacDesktopWindowGraphics.h  tacDesktopWindowManager.cpp  tacDesktopWindowManager.h  tacDesktopWindowSettingsTracker.cpp  tacDesktopWindowSettingsTracker.h  tac_desktop_app.cpp  tac_desktop_app.h  tac_desktop_app_error_report.cpp  tac_desktop_app_renderers.cpp  tac_desktop_app_renderers.h  tac_desktop_app_threads.cpp  tac_desktop_app_threads.h  tac_desktop_event.cpp  tac_desktop_event.h  tac_desktop_vk.cpp  tac_desktop_vk.h  tac_desktop_window_graphics.cpp  tac_desktop_window_graphics.h  tac_desktop_window_life.cpp  tac_desktop_window_move.cpp  tac_desktop_window_move.h  tac_desktop_window_resize.cpp  tac_desktop_window_resize.h  tac_desktop_window_settings_tracker.cpp  tac_desktop_window_settings_tracker.h  tac_iapp.h  tac_logic_thread.cpp  tac_logic_thread.h  tac_platform.h  tac_platform_thread.cpp  tac_platform_thread.h  tac_register_renderers.cpp  tac_register_renderers.h  (+7 more)
src/space/: CMakeLists.txt  tacGhost.cpp  tacGhost.h  tac_client.cpp  tac_client.h  tac_component.cpp  tac_component.h  tac_entity.cpp  tac_entity.h  tac_ghost.cpp  tac_ghost.h  tac_gjk.cpp  tac_gjk.h  tac_light.cpp  tac_player.cpp  tac_player.h  tac_script.cpp  tac_script.h  tac_script_game_client.cpp  tac_script_game_client.h  tac_server.cpp  tac_server.h  tac_space.cpp  tac_space.h  tac_space_net.cpp  tac_space_net.h  tac_space_types.h  tac_system.cpp  tac_system.h  tac_world.cpp  tac_world.h  tacclient.cpp  tacclient.h  taccollider.cpp  taccollider.h  taccomponent.cpp  taccomponent.h  tacentity.cpp  tacentity.h  tacgjk.cpp  (+29 more)
src/tac-desktop-app/: CMakeLists.txt  tac_desktop_app.cpp  tac_desktop_app.h  tac_desktop_app_error_report.h  tac_desktop_app_renderers.cpp  tac_desktop_event.cpp  tac_desktop_event.h  tac_desktop_window_life.cpp  tac_desktop_window_move.cpp  tac_desktop_window_move.h  tac_desktop_window_resize.cpp  tac_desktop_window_resize.h  tac_desktop_window_settings_tracker.cpp  tac_desktop_window_settings_tracker.h  tac_iapp.h  tac_logic_thread.cpp  tac_logic_thread.h  (+4 more)
(+1827 files in other folders)
