add_subdirectory( tac-engine-core )
add_subdirectory( tac-ecs )
add_subdirectory( tac-desktop-app )
add_subdirectory( tac-level-editor )
add_subdirectory( tac-level-editor-2 )
add_subdirectory( game )
add_subdirectory( tac-examples )
add_subdirectory( game-weekendtrace )
add_subdirectory( game-pbrt )

